--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -48,6 +48,7 @@ test:
             "context",
             "coroutine",
             "date_time",
+            "fiber",
             "filesystem",
             "graph",
             "iostreams",
